tests/errors/string-max-exceeded.ssv
slug:string(..5)
hello
toolong
